// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`HDHub4u handle stranger things s05e05 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "height": 720,
      "title": "Stranger Things S05 Episode 5 720p",
    },
    "url": "https://hubcloud.foo/drive/search-recover.php?from_ac=Fv8xSTLVr_myF7sxac7dVKo38LcekxfbbGD62Cbz8oCCTrLL&q=U3RyYW5nZXIgVGhpbmdzIFMwNSBFcGlzb2RlIDUgNzIwcA",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "height": 720,
      "title": "S05E05 720p",
    },
    "url": "https://hubcdn.org/file/s209STlORA7KCZMDW1zBZD1F2",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "height": 1080,
      "title": "Stranger Things S05 Episode 5 1080p",
    },
    "url": "https://hubcloud.foo/drive/search-recover.php?from_ac=-TrPfwv24ecfiVXil0_9bQrdNAe_7sKDuFodaD2FVi7VwhGm&q=U3RyYW5nZXIgVGhpbmdzIFMwNSBFcGlzb2RlIDUgMTA4MHA",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "height": 1080,
      "title": "S05E05 1080p",
    },
    "url": "https://hubcdn.org/file/HVsAjJbUA3Dx4n5gkXJP8h6FA",
  },
]
`;

exports[`HDHub4u handle stranger things s05e07 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "height": 720,
      "title": "Stranger Things S05 Episode 7 720p",
    },
    "url": "https://hubcloud.foo/drive/search-recover.php?from_ac=LbjsKFBtH_KjuWWg8jRbxDXqUr8QP4oCy9DY5ySaS18WgkZP&q=U3RyYW5nZXIgVGhpbmdzIFMwNSBFcGlzb2RlIDcgNzIwcA",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "height": 720,
      "title": "S05E07 720p",
    },
    "url": "https://hubcdn.org/file/6SbBuOBqZilbXKo0OnaLQyo2I",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "height": 1080,
      "title": "Stranger Things S05 Episode 7 1080p",
    },
    "url": "https://hubcloud.foo/drive/search-recover.php?from_ac=9PgksPIXSzM0iB-HpdNwptwP7cgLk4sxkMKbs4EzhSVEJMZa&q=U3RyYW5nZXIgVGhpbmdzIFMwNSBFcGlzb2RlIDcgMTA4MHA",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "height": 1080,
      "title": "S05E07 1080p",
    },
    "url": "https://hubcdn.org/file/8eFiSeVdd4nzXZD5NsPP3gaiN",
  },
]
`;

exports[`HDHub4u handle superman 2025 1`] = `
[
  {
    "meta": {
      "bytes": 838860800,
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "height": 720,
      "title": "Superman 2025 720p",
    },
    "url": "https://hubcloud.foo/drive/search-recover.php?from_ac=611XfumURzbMxSJG3XAB9QlfMwuIVENRUS91L7DBtuTZV4eT&q=U3VwZXJtYW4gMjAyNSA3MjBw",
  },
  {
    "meta": {
      "bytes": 1932735283,
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "height": 1080,
      "title": "Superman 2025 1080p",
    },
    "url": "https://hubcloud.foo/drive/search-recover.php?from_ac=B0Zt2spEe_FuSEhY1b7nb3_MNzADN6UJ8oGLBhyYH6s8HzVc&q=U3VwZXJtYW4gMjAyNSAxMDgwcA",
  },
  {
    "meta": {
      "bytes": 10307921510,
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "height": 1080,
      "title": "Superman 2025 1080p",
    },
    "url": "https://hubcloud.foo/drive/search-recover.php?from_ac=fkG65xap4NOYyb3Ri24SqkLkhkeef9ImR3X8Ge9dN5-C7mmF&q=U3VwZXJtYW4gMjAyNSAxMDgwcA",
  },
  {
    "meta": {
      "bytes": 26628797235,
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "height": 2160,
      "title": "Superman 2025 4K",
    },
    "url": "https://hubcloud.foo/drive/search-recover.php?from_ac=1AUzY_MDAjMVPbIYBtOREd9TbiC4uLhIq_6Pzt07oSL6Y7ix&q=U3VwZXJtYW4gMjAyNSA0Sw",
  },
]
`;

exports[`HDHub4u handle the bone temple 2026 1`] = `
[
  {
    "meta": {
      "bytes": 828375040,
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "height": 720,
      "title": "720p 10Bit HEVC",
    },
    "url": "https://hubcloud.foo/drive/mphhuejosenpo1f",
  },
  {
    "meta": {
      "bytes": 1932735283,
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "height": 1080,
      "title": "1080p 10Bit HEVC",
    },
    "url": "https://hubcloud.foo/drive/y24dkxj21ff1pi4",
  },
  {
    "meta": {
      "bytes": 2469606195,
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "height": 1080,
      "title": "1080p x264",
    },
    "url": "https://hubcloud.foo/drive/prhvvpxzam7rpva",
  },
  {
    "meta": {
      "bytes": 7516192768,
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "height": 1080,
      "title": "1080p WEB-DL",
    },
    "url": "https://hubcloud.foo/drive/wybyd8a0v52rwda",
  },
  {
    "meta": {
      "bytes": 1073741824,
      "countryCodes": [
        "multi",
        "hi",
      ],
      "height": 720,
      "title": "720p x264",
    },
    "url": "https://hubcloud.foo/drive/cqhutwars6jjrtd",
  },
  {
    "meta": {
      "bytes": 2147483648,
      "countryCodes": [
        "multi",
        "hi",
      ],
      "height": 1080,
      "title": "1080p x264",
    },
    "url": "https://hubcloud.foo/drive/brkmtrr9qaxqbgt",
  },
  {
    "meta": {
      "bytes": 4831838208,
      "countryCodes": [
        "multi",
        "hi",
      ],
      "height": 1080,
      "title": "HQ 1080p",
    },
    "url": "https://hubcloud.foo/drive/6xxhpyawdn0pn2c",
  },
]
`;
